--- a/index.html
+++ b/index.html
@@ -25,8 +25,81 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col">
-          <!--first part:nav1&nav2-->
+        <!--first part:nav1-->
+        <div class="col-12">
+          <ul class="nav1 col-12 black">
+            <li>
+              <a href="#" class="px-4"
+                ><i class="bi bi-border-all"></i> Corporate
+                <i class="bi bi-chevron-down"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="me-5"
+                ><i class="bi bi-globe2"></i> Worldwide
+                <i class="bi bi-chevron-down"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <!--second part:nav2-->
+        <div class="col-12">
+          <ul class="nav2 col-12 white mt-4 mb-0">
+            <li>
+              <a href="#"><img class="col-7 px-4" src="images/logo.webp" /></a>
+            </li>
+            <li>
+              <a href="#" class="px-2"
+                >Consumer Products <i class="bi bi-chevron-down"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="px-2"
+                >Business Products <i class="bi bi-chevron-down"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="px-2"
+                >Support <i class="bi bi-chevron-down"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="px-2"
+                >Partners & Developers <i class="bi bi-chevron-down"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="px-2"
+                >About Huawei <i class="bi bi-chevron-down"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="px-2"
+                >About Huawei <i class="bi bi-chevron-down"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="px-0"
+                ><i class="bi bi-search text-black search"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <!--third part:img1-->
+        <div class="col-12">
+          <div class="box3">
+            <img
+              src="images/1.1.png"
+              class="img1 col-12 w-100 m-0 p-0 d-block"
+            />
+            <button class="button1 bg-danger text-white px-5 py-2 d-block">
+              Learn More
+            </button>
+          </div>
+        </div>
+        <!--4th part:whats new?-->
+        <div class="box4 col-12 w-100">
+          <h2 class="col-6 mt-5">What's New</h2>
         </div>
       </div>
     </div>
